--- a/public/index.html
+++ b/public/index.html
@@ -140,6 +140,7 @@
         </div>
     </div>
 
+    <!--Passar para outro arquivo js-->
     <script>
         const API_URL = 'http://localhost:3000';
 
