--- a/public/index.html
+++ b/public/index.html
@@ -4,14 +4,14 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Controle Financeiro - Simples</title>
+	<title>Controle Financeiro</title>
 	<link rel="stylesheet" href="style.css">
 </head>
 
 <body>
 	<header class="site-header">
 		<div class="container header-inner">
-			<h1 class="logo">Controle Financeiro</h1>
+			<h1 class="logo">FinSort</h1>
 			<div class="header-actions">
 				<button id="themeToggle" class="btn icon-btn">🌙</button>
 			</div>
